Letter spacing fix

--- a/css/stephen-hay.css
+++ b/css/stephen-hay.css
@@ -18,6 +18,7 @@ body {
   font: 100%/1.5 helvetica, arial, sans-serif;
   margin: 0;
   padding: 0;
+  letter-spacing: 0.19em;
   text-rendering: geometricPrecision;
   -webkit-text-size-adjust: 100%;
 }
@@ -34,6 +35,7 @@ body {
 
 .fonts-loaded body {
   font-family: "Fedra Sans Screen Regular", helvetica, arial, sans-serif;
+  letter-spacing: normal;
 }
 
 h1, h2, h3, h4, [itemprop="UserComment"] ul, legend {
